--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FINAL FULL PIPELINE WITH CONFIG SUPPORT\n",
+    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FIXED VERSION\n",
     "\n",
     "%pip install scikit-learn pyyaml\n",
     "\n",
@@ -67,7 +67,7 @@
     "print(f\"🔍 Loaded {len(EXPERIMENT_LIST)} experiment variations.\")\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 3️⃣ Load Raw Data (NOT preprocessed)\n",
+    "# 3️⃣ Load Raw Data (with Label Encoding)\n",
     "# -----------------------------------------\n",
     "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
     "\n",
@@ -77,24 +77,26 @@
     "X = df[FEATURES]\n",
     "y = df[LABEL_COL]\n",
     "\n",
-    "# 🔥 Convert textual labels (\"yes\", \"no\") → numeric 1/0\n",
+    "# 🔥 Convert textual labels (\"yes\", \"no\") → numeric 1/0 for training\n",
     "if y.dtype == \"object\":\n",
     "    y = y.map({\"yes\": 1, \"no\": 0}).astype(int)\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 4️⃣ Setup Shared Preprocessing Pipeline\n",
+    "# 4️⃣ Setup Preprocessing Pipeline (Handles Raw Data)\n",
     "# -----------------------------------------\n",
     "categorical_cols = [col for col in X.columns if X[col].dtype == \"object\"]\n",
     "numeric_cols = [col for col in X.columns if col not in categorical_cols]\n",
     "\n",
-    "print(f\"🔧 Categorical Features: {len(categorical_cols)}\")\n",
-    "print(f\"🔧 Numeric Features: {len(numeric_cols)}\")\n",
+    "print(f\"🔧 Categorical Features: {len(categorical_cols)} → {categorical_cols}\")\n",
+    "print(f\"🔧 Numeric Features: {len(numeric_cols)} → {numeric_cols}\")\n",
     "\n",
+    "# Pipeline will handle raw categorical data automatically\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        (\"categorical\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols),\n",
+    "        (\"categorical\", OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False), categorical_cols),\n",
     "        (\"numeric\", StandardScaler(), numeric_cols)\n",
-    "    ]\n",
+    "    ],\n",
+    "    remainder='passthrough'  # Keep any other columns as-is\n",
     ")\n",
     "\n",
     "# -----------------------------------------\n",
@@ -115,12 +117,18 @@
     "for exp in EXPERIMENT_LIST:\n",
     "    \n",
     "    exp_name = exp[\"name\"]\n",
-    "    params = exp[\"params\"]\n",
+    "    params = exp[\"params\"].copy()  # Make a copy to avoid modifying original\n",
+    "    \n",
+    "    # 🔥 FIX: Remove random_state from params if it exists (we'll set it separately)\n",
+    "    config_random_state = params.pop(\"random_state\", RANDOM_STATE)\n",
     "\n",
     "    print(f\"\\n⚙️ Training experiment: {exp_name}\")\n",
+    "    print(f\"   Parameters: {params}\")\n",
     "\n",
-    "    rf_model = RandomForestClassifier(random_state=RANDOM_STATE, **params)\n",
+    "    # Create model with random_state set explicitly\n",
+    "    rf_model = RandomForestClassifier(random_state=config_random_state, **params)\n",
     "\n",
+    "    # Complete pipeline: Preprocessing + Model\n",
     "    full_pipeline = Pipeline([\n",
     "        (\"preprocessing\", preprocessor),\n",
     "        (\"model\", rf_model)\n",
@@ -128,36 +136,75 @@
     "\n",
     "    with mlflow.start_run(run_name=exp_name):\n",
     "\n",
+    "        # Train on RAW data - pipeline handles preprocessing\n",
     "        full_pipeline.fit(X_train, y_train)\n",
     "\n",
+    "        # Predictions\n",
     "        y_pred = full_pipeline.predict(X_test)\n",
     "        y_proba = full_pipeline.predict_proba(X_test)[:, 1]\n",
     "\n",
     "        # ----- Metrics -----\n",
     "        metrics = {\n",
     "            \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
-    "            \"test_precision\": precision_score(y_test, y_pred),\n",
-    "            \"test_recall\": recall_score(y_test, y_pred),\n",
-    "            \"test_f1\": f1_score(y_test, y_pred),\n",
+    "            \"test_precision\": precision_score(y_test, y_pred, zero_division=0),\n",
+    "            \"test_recall\": recall_score(y_test, y_pred, zero_division=0),\n",
+    "            \"test_f1\": f1_score(y_test, y_pred, zero_division=0),\n",
     "            \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
     "        }\n",
     "\n",
+    "        # Log all metrics\n",
     "        for k, v in metrics.items():\n",
     "            mlflow.log_metric(k, v)\n",
     "\n",
+    "        # Log hyperparameters\n",
+    "        mlflow.log_params(params)\n",
+    "        mlflow.log_param(\"random_state\", config_random_state)\n",
+    "\n",
+    "        # Create model signature with RAW data format\n",
     "        signature = infer_signature(X_train, full_pipeline.predict(X_train))\n",
     "\n",
+    "        # Log the FULL pipeline (preprocessing + model)\n",
     "        mlflow.sklearn.log_model(\n",
     "            sk_model=full_pipeline,\n",
     "            artifact_path=MODEL_ARTIFACT_PATH,\n",
-    "            signature=signature\n",
+    "            signature=signature,\n",
+    "            input_example=X_train.head(5)  # Log example raw data\n",
     "        )\n",
+    "\n",
+    "        print(f\"   ✅ {exp_name} → F1: {metrics['test_f1']:.4f}, \"\n",
+    "              f\"Recall: {metrics['test_recall']:.4f}, \"\n",
+    "              f\"ROC-AUC: {metrics['test_roc_auc']:.4f}\")\n",
     "\n",
     "        results.append((exp_name, metrics))\n",
     "\n",
-    "print(\"\\n🎉 Training Completed Successfully!\")\n",
-    "print(\"📊 All experiment models logged to MLflow.\")\n",
-    "\n"
+    "# -----------------------------------------\n",
+    "# 6️⃣ Summary of All Experiments\n",
+    "# -----------------------------------------\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"🎉 TRAINING COMPLETED SUCCESSFULLY!\")\n",
+    "print(\"=\" * 80)\n",
+    "print(\"\\n📊 EXPERIMENT RESULTS SUMMARY:\\n\")\n",
+    "\n",
+    "results_df = pd.DataFrame([\n",
+    "    {\"Experiment\": name, **metrics} \n",
+    "    for name, metrics in results\n",
+    "])\n",
+    "\n",
+    "print(results_df.to_string(index=False))\n",
+    "\n",
+    "# Find best model by F1 score\n",
+    "best_idx = results_df[\"test_f1\"].idxmax()\n",
+    "best_model = results_df.iloc[best_idx]\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(f\"🏆 BEST MODEL: {best_model['Experiment']}\")\n",
+    "print(f\"   F1 Score: {best_model['test_f1']:.4f}\")\n",
+    "print(f\"   Recall: {best_model['test_recall']:.4f}\")\n",
+    "print(f\"   ROC-AUC: {best_model['test_roc_auc']:.4f}\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "print(\"\\n✅ All models logged to MLflow and can accept RAW data!\")\n",
+    "print(\"✅ Models ready for serving endpoint deployment!\")"
    ]
   }
  ],
