--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -97,11 +97,7 @@
     "def get_recent_runs():\n",
     "    print(\"\\n📍 Fetching Experiment Runs...\")\n",
     "\n",
-    "    order = (\n",
-    "        f\"metrics.{config.PRIMARY_METRIC} DESC\"\n",
-    "        if config.DIRECTION == \"maximize\"\n",
-    "        else f\"metrics.{config.PRIMARY_METRIC} ASC\"\n",
-    "    )\n",
+    "    order = f\"metrics.{config.PRIMARY_METRIC} {'DESC' if config.DIRECTION=='maximize' else 'ASC'}\"\n",
     "\n",
     "    runs = client.search_runs(\n",
     "        [experiment.experiment_id],\n",
