--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -11,23 +11,21 @@
    },
    "outputs": [],
    "source": [
-    "# 🎯 MODEL REGISTRATION SCRIPT (WITH SLACK NOTIFICATIONS ADDED)\n",
+    "# 🎯 MODEL REGISTRATION SCRIPT - FIXED & CONFIG DRIVEN\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
     "import sys\n",
     "import yaml\n",
     "import json\n",
-    "import traceback\n",
     "import requests\n",
     "from typing import Dict, Optional, List\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
-    "from IPython import get_ipython\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🎯 MODEL REGISTRATION SYSTEM (CONTROLLED MULTI-RUN + SLACK NOTIFICATIONS)\")\n",
+    "print(\"🎯 MODEL REGISTRATION SYSTEM - AUTOMATED & DUPLICATE SAFE\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# ---------------------- LOAD PIPELINE CONFIG ----------------------\n",
@@ -61,29 +59,24 @@
     "\n",
     "        self.REGISTRATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"registration_log\"]\n",
     "\n",
-    "        # ---------------------- NEW: SLACK CONFIG ----------------------\n",
+    "        # Slack config (optional)\n",
     "        self.SLACK_WEBHOOK = None\n",
-    "        for scope in [\"shared-scope\", \"dev-scope\"]:\n",
-    "            try:\n",
-    "                self.SLACK_WEBHOOK = dbutils.secrets.get(scope, \"SLACK_WEBHOOK_URL\")\n",
-    "                print(f\"🔐 Slack webhook loaded from secret scope: {scope}\")\n",
-    "                break\n",
-    "            except:\n",
-    "                pass\n",
-    "\n",
-    "        if not self.SLACK_WEBHOOK:\n",
-    "            print(\"⚠ Slack webhook NOT configured. Notifications disabled.\")\n",
+    "        try:\n",
+    "            self.SLACK_WEBHOOK = dbutils.secrets.get(\"shared-scope\", \"SLACK_WEBHOOK_URL\")\n",
+    "            print(\"🔐 Slack webhook loaded\")\n",
+    "        except:\n",
+    "            print(\"⚠ Slack webhook NOT configured (Optional)\")\n",
     "\n",
     "\n",
     "config = Config()\n",
     "\n",
     "print(f\"\\n📌 Model Registry: {config.MODEL_NAME}\")\n",
     "print(f\"📌 Duplicate Logic: {'ENABLED' if config.DUPLICATE_CHECK_ENABLED else 'DISABLED'}\")\n",
-    "print(f\"📌 Slack Enabled: {'YES' if config.SLACK_WEBHOOK else 'NO'}\")\n",
+    "print(f\"📌 Primary Metric: {config.PRIMARY_METRIC}\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "\n",
-    "# ---------------------- SLACK NOTIFIER ----------------------\n",
+    "# ---------------------- SLACK NOTIFIER (Optional) ----------------------\n",
     "\n",
     "class SlackNotifier:\n",
     "    def __init__(self, webhook_url: Optional[str]):\n",
@@ -91,7 +84,6 @@
     "\n",
     "    def send(self, message: str, level: str = \"info\"):\n",
     "        if not self.webhook_url:\n",
-    "            print(f\"📢 [Slack Disabled] {message}\")\n",
     "            return\n",
     "        \n",
     "        emoji = {\"info\":\"ℹ️\",\"success\":\"✅\",\"warning\":\"⚠️\",\"error\":\"❌\"}.get(level,\"ℹ️\")\n",
@@ -99,7 +91,6 @@
     "\n",
     "        try:\n",
     "            requests.post(self.webhook_url, json=payload, timeout=5)\n",
-    "            print(f\"📨 Slack message sent: {level}\")\n",
     "        except Exception as e:\n",
     "            print(f\"⚠ Slack send failed: {e}\")\n",
     "\n",
@@ -118,7 +109,7 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
-    "# ---------------------- FIXED: FETCH ALL RUNS ----------------------\n",
+    "# ---------------------- FETCH ALL RUNS ----------------------\n",
     "\n",
     "def get_all_runs() -> List[Dict]:\n",
     "    print(\"\\n📍 Fetching ALL experiment runs...\")\n",
@@ -132,44 +123,64 @@
     "    processed_runs = []\n",
     "\n",
     "    for run in runs:\n",
-    "        # ✅ FIX → dynamically resolve correct logged model URI\n",
-    "        model_uri = client.get_run(run.info.run_id).info.artifact_uri + f\"/{config.ARTIFACT_PATH}\"\n",
+    "        # Get all metrics dynamically\n",
+    "        all_metrics = {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE if m in run.data.metrics}\n",
+    "        \n",
+    "        # Build model URI properly\n",
+    "        model_uri = f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\"\n",
     "\n",
     "        processed_runs.append({\n",
     "            \"run_id\": run.info.run_id,\n",
     "            \"run_name\": run.info.run_name or \"unnamed_run\",\n",
-    "            \"metrics\": {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE},\n",
+    "            \"metrics\": all_metrics,\n",
     "            \"params\": run.data.params,\n",
     "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
     "            \"model_uri\": model_uri\n",
     "        })\n",
     "\n",
+    "    print(f\"✅ Found {len(processed_runs)} runs in experiment\")\n",
     "    return processed_runs\n",
     "\n",
     "\n",
     "# ---------------------- DUPLICATE DETECTION ----------------------\n",
     "\n",
     "def is_duplicate_model(new_model: Dict) -> bool:\n",
+    "    \"\"\"Check if model with same metrics and params already exists\"\"\"\n",
+    "    \n",
     "    if not config.DUPLICATE_CHECK_ENABLED:\n",
     "        return False\n",
     "\n",
-    "    versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
+    "    try:\n",
+    "        versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
+    "    except:\n",
+    "        # Model doesn't exist yet, not a duplicate\n",
+    "        return False\n",
     "\n",
     "    for version in versions:\n",
-    "        run = client.get_run(version.run_id)\n",
+    "        try:\n",
+    "            run = client.get_run(version.run_id)\n",
     "\n",
-    "        metric_match = all(\n",
-    "            abs(run.data.metrics.get(m) - new_model[\"metrics\"].get(m)) <= config.TOLERANCE\n",
-    "            for m in config.METRICS_TO_COMPARE\n",
-    "            if run.data.metrics.get(m) is not None and new_model[\"metrics\"].get(m) is not None\n",
-    "        )\n",
+    "            # Compare metrics within tolerance\n",
+    "            metric_match = True\n",
+    "            for m in config.METRICS_TO_COMPARE:\n",
+    "                old_val = run.data.metrics.get(m)\n",
+    "                new_val = new_model[\"metrics\"].get(m)\n",
+    "                \n",
+    "                if old_val is not None and new_val is not None:\n",
+    "                    if abs(old_val - new_val) > config.TOLERANCE:\n",
+    "                        metric_match = False\n",
+    "                        break\n",
     "\n",
-    "        params_match = (new_model[\"params\"] == run.data.params)\n",
+    "            # Compare params\n",
+    "            params_match = (new_model[\"params\"] == run.data.params)\n",
     "\n",
-    "        if metric_match and params_match:\n",
-    "            print(f\"⚠ Duplicate detected → Matches version v{version.version}\")\n",
-    "            slack.send(f\"⚠ Duplicate model skipped (Run: {new_model['run_name']})\", \"warning\")\n",
-    "            return True\n",
+    "            if metric_match and params_match:\n",
+    "                print(f\"   ⚠ Duplicate detected → Matches version v{version.version}\")\n",
+    "                return True\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(f\"   ⚠ Error checking version {version.version}: {e}\")\n",
+    "            continue\n",
     "    \n",
     "    return False\n",
     "\n",
@@ -177,85 +188,132 @@
     "# ---------------------- REGISTER MODEL ----------------------\n",
     "\n",
     "def register_model(model: Dict):\n",
+    "    \"\"\"Register model and add all metadata as tags\"\"\"\n",
+    "    \n",
     "    if is_duplicate_model(model):\n",
+    "        slack.send(f\"⚠ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
     "        return None\n",
     "\n",
+    "    # Register the model\n",
+    "    print(f\"   🔄 Registering model...\")\n",
     "    new_version = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
     "    version = new_version.version\n",
     "\n",
-    "    print(f\"🎯 Registered version: {version}\")\n",
-    "    slack.send(f\"✅ Model registered: {config.MODEL_NAME} (v{version})\", \"success\")\n",
+    "    print(f\"   ✅ Registered as version: {version}\")\n",
+    "    slack.send(f\"✅ Registered: {config.MODEL_NAME} v{version}\", \"success\")\n",
     "\n",
+    "    # Add comprehensive tags\n",
     "    try:\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric_value\", str(model[\"primary_metric\"]))\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"created_by\", \"Vipul Tak\")\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"artifact_path\", config.ARTIFACT_PATH)\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"registered_timestamp\", datetime.now().isoformat())\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"params\", json.dumps(model[\"params\"]))\n",
-    "        client.set_model_version_tag(config.MODEL_NAME, version, \"metrics\", json.dumps(model[\"metrics\"]))\n",
+    "        tags = {\n",
+    "            \"run_name\": model[\"run_name\"],\n",
+    "            \"run_id\": model[\"run_id\"],\n",
+    "            \"primary_metric\": config.PRIMARY_METRIC,\n",
+    "            \"primary_metric_value\": str(round(model[\"primary_metric\"], 4)),\n",
+    "            \"artifact_path\": config.ARTIFACT_PATH,\n",
+    "            \"registered_timestamp\": datetime.now().isoformat(),\n",
+    "            \"registered_by\": \"Automated Pipeline\",\n",
+    "            \"params\": json.dumps(model[\"params\"]),\n",
+    "            \"metrics\": json.dumps({k: round(v, 4) for k, v in model[\"metrics\"].items() if v is not None})\n",
+    "        }\n",
     "\n",
+    "        # Set all tags\n",
+    "        for key, value in tags.items():\n",
+    "            client.set_model_version_tag(config.MODEL_NAME, version, key, value)\n",
+    "\n",
+    "        # Update description\n",
     "        client.update_model_version(\n",
     "            name=config.MODEL_NAME,\n",
     "            version=version,\n",
     "            description=(\n",
-    "                f\"📦 Model registered automatically.\\n\"\n",
-    "                f\"🔹 Run Name: {model['run_name']}\\n\"\n",
-    "                f\"🔹 Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']}\\n\"\n",
-    "                f\"📅 Time: {datetime.now()}\"\n",
+    "                f\"📦 Automated Model Registration\\n\\n\"\n",
+    "                f\"🔹 **Run Name:** {model['run_name']}\\n\"\n",
+    "                f\"🔹 **Primary Metric ({config.PRIMARY_METRIC}):** {model['primary_metric']:.4f}\\n\"\n",
+    "                f\"🔹 **Run ID:** {model['run_id']}\\n\"\n",
+    "                f\"📅 **Registered:** {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\"\n",
+    "                f\"**Metrics:**\\n\"\n",
+    "                + \"\\n\".join([f\"  • {k}: {v:.4f}\" for k, v in model[\"metrics\"].items() if v is not None])\n",
     "            )\n",
     "        )\n",
     "\n",
-    "        print(f\"🏷 Metadata updated for version {version}\")\n",
+    "        print(f\"   🏷 Metadata and tags updated\")\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠ Failed to set tags: {e}\")\n",
+    "        print(f\"   ⚠ Failed to set tags: {e}\")\n",
     "\n",
     "    return version\n",
     "\n",
     "\n",
-    "# ---------------------- LOG DECISION ----------------------\n",
+    "# ---------------------- LOG DECISION TO TABLE ----------------------\n",
     "\n",
     "def log_decision(model, registered, version, reason):\n",
-    "    df = pd.DataFrame([{\n",
-    "        \"timestamp\": datetime.now(),\n",
-    "        \"run_id\": model[\"run_id\"],\n",
-    "        \"run_name\": model[\"run_name\"],\n",
-    "        \"primary_metric_value\": model[\"primary_metric\"],\n",
-    "        \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
-    "        \"params_json\": json.dumps(model[\"params\"]),\n",
-    "        \"registered\": registered,\n",
-    "        \"registered_version\": version,\n",
-    "        \"reason\": reason\n",
-    "    }])\n",
+    "    \"\"\"Log registration decision to Delta table\"\"\"\n",
+    "    \n",
+    "    try:\n",
+    "        df = pd.DataFrame([{\n",
+    "            \"timestamp\": datetime.now(),\n",
+    "            \"run_id\": model[\"run_id\"],\n",
+    "            \"run_name\": model[\"run_name\"],\n",
+    "            \"model_name\": config.MODEL_NAME,\n",
+    "            \"primary_metric\": config.PRIMARY_METRIC,\n",
+    "            \"primary_metric_value\": model[\"primary_metric\"],\n",
+    "            \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
+    "            \"params_json\": json.dumps(model[\"params\"]),\n",
+    "            \"registered\": registered,\n",
+    "            \"registered_version\": version,\n",
+    "            \"reason\": reason\n",
+    "        }])\n",
     "\n",
-    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
-    "    print(\"📄 Logged in evaluation table\")\n",
+    "        spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "        print(f\"   📄 Logged to: {config.REGISTRATION_LOG_TABLE}\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"   ⚠ Failed to log decision: {e}\")\n",
     "\n",
     "\n",
-    "# ---------------------- MAIN ----------------------\n",
+    "# ---------------------- MAIN EXECUTION ----------------------\n",
     "\n",
     "def main():\n",
-    "    print(\"\\n🚀 Scanning all model runs...\")\n",
+    "    print(\"\\n🚀 Starting Model Registration Pipeline...\\n\")\n",
+    "    \n",
     "    runs = get_all_runs()\n",
     "\n",
+    "    if not runs:\n",
+    "        print(\"❌ No runs found in experiment!\")\n",
+    "        return\n",
+    "\n",
+    "    registered_count = 0\n",
+    "    skipped_count = 0\n",
+    "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
-    "        print(f\"\\n---------- [{idx}/{len(runs)}] Processing: {model['run_name']} ----------\")\n",
+    "        print(f\"\\n{'='*80}\")\n",
+    "        print(f\"[{idx}/{len(runs)}] Processing: {model['run_name']}\")\n",
+    "        print(f\"   Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
+    "        print(f\"{'='*80}\")\n",
     "\n",
     "        version = register_model(model)\n",
     "\n",
     "        if version:\n",
-    "            log_decision(model, True, version, \"✔ Registered (unique)\")\n",
+    "            log_decision(model, True, version, \"✔ Registered successfully\")\n",
+    "            registered_count += 1\n",
     "        else:\n",
     "            log_decision(model, False, None, \"⚠ Duplicate - Skipped\")\n",
+    "            skipped_count += 1\n",
     "\n",
-    "    slack.send(\"📁 Model registration pipeline completed.\", \"info\")\n",
-    "    print(\"\\n🎉 Registration Complete — All Runs Processed\")\n",
+    "    # Final summary\n",
+    "    print(\"\\n\" + \"=\"*80)\n",
+    "    print(\"🎉 REGISTRATION PIPELINE COMPLETED\")\n",
+    "    print(\"=\"*80)\n",
+    "    print(f\"✅ Models Registered: {registered_count}\")\n",
+    "    print(f\"⚠ Duplicates Skipped: {skipped_count}\")\n",
+    "    print(f\"📊 Total Processed: {len(runs)}\")\n",
+    "    print(f\"📦 Model Name: {config.MODEL_NAME}\")\n",
+    "    print(\"=\"*80)\n",
+    "\n",
+    "    slack.send(f\"📁 Registration complete: {registered_count} registered, {skipped_count} skipped\", \"info\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
