--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,11 +11,12 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FIXED VERSION\n",
+    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FINAL COMPATIBLE VERSION\n",
     "\n",
     "%pip install scikit-learn pyyaml\n",
     "\n",
     "import mlflow\n",
+    "import time\n",
     "import yaml\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -50,10 +51,7 @@
     "RAW_INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
     "FEATURES = pipeline_cfg[\"data\"][\"features\"]\n",
     "LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
-    "\n",
-    "TEST_SIZE = pipeline_cfg[\"data\"][\"split\"][\"test_size\"]\n",
-    "RANDOM_STATE = pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
-    "STRATIFY = pipeline_cfg[\"data\"][\"split\"][\"stratify\"]\n",
+    "RUN_NAME_PREFIX = pipeline_cfg[\"experiment\"][\"run_name_prefix\"]\n",
     "\n",
     "print(\"✅ Pipeline config loaded.\")\n",
     "\n",
@@ -77,58 +75,55 @@
     "X = df[FEATURES]\n",
     "y = df[LABEL_COL]\n",
     "\n",
-    "# 🔥 Convert textual labels (\"yes\", \"no\") → numeric 1/0 for training\n",
+    "# Label conversion\n",
     "if y.dtype == \"object\":\n",
     "    y = y.map({\"yes\": 1, \"no\": 0}).astype(int)\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 4️⃣ Setup Preprocessing Pipeline (Handles Raw Data)\n",
+    "# 4️⃣ Setup Preprocessing Pipeline\n",
     "# -----------------------------------------\n",
     "categorical_cols = [col for col in X.columns if X[col].dtype == \"object\"]\n",
     "numeric_cols = [col for col in X.columns if col not in categorical_cols]\n",
     "\n",
-    "print(f\"🔧 Categorical Features: {len(categorical_cols)} → {categorical_cols}\")\n",
-    "print(f\"🔧 Numeric Features: {len(numeric_cols)} → {numeric_cols}\")\n",
-    "\n",
-    "# Pipeline will handle raw categorical data automatically\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"categorical\", OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False), categorical_cols),\n",
     "        (\"numeric\", StandardScaler(), numeric_cols)\n",
     "    ],\n",
-    "    remainder='passthrough'  # Keep any other columns as-is\n",
+    "    remainder='passthrough'\n",
     ")\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 5️⃣ Train model for each config experiment\n",
+    "# 5️⃣ Setup MLflow Tracking\n",
     "# -----------------------------------------\n",
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "mlflow.set_experiment(EXPERIMENT_NAME)\n",
     "\n",
-    "stratify_option = y if STRATIFY else None\n",
+    "stratify_option = y if pipeline_cfg[\"data\"][\"split\"][\"stratify\"] else None\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=TEST_SIZE, stratify=stratify_option, random_state=RANDOM_STATE\n",
+    "    X, y,\n",
+    "    test_size=pipeline_cfg[\"data\"][\"split\"][\"test_size\"],\n",
+    "    stratify=stratify_option,\n",
+    "    random_state=pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
     ")\n",
     "\n",
     "results = []\n",
     "\n",
+    "# -----------------------------------------\n",
+    "# 6️⃣ Run All Experiments (With all metrics)\n",
+    "# -----------------------------------------\n",
+    "\n",
     "for exp in EXPERIMENT_LIST:\n",
     "    \n",
-    "    exp_name = exp[\"name\"]\n",
-    "    params = exp[\"params\"].copy()  # Make a copy to avoid modifying original\n",
-    "    \n",
-    "    # 🔥 FIX: Remove random_state from params if it exists (we'll set it separately)\n",
-    "    config_random_state = params.pop(\"random_state\", RANDOM_STATE)\n",
+    "    exp_name = f\"{RUN_NAME_PREFIX}_{exp['name']}\"\n",
+    "    params = exp[\"params\"].copy()\n",
     "\n",
-    "    print(f\"\\n⚙️ Training experiment: {exp_name}\")\n",
-    "    print(f\"   Parameters: {params}\")\n",
+    "    config_random_state = params.pop(\"random_state\", 42)\n",
     "\n",
-    "    # Create model with random_state set explicitly\n",
     "    rf_model = RandomForestClassifier(random_state=config_random_state, **params)\n",
     "\n",
-    "    # Complete pipeline: Preprocessing + Model\n",
     "    full_pipeline = Pipeline([\n",
     "        (\"preprocessing\", preprocessor),\n",
     "        (\"model\", rf_model)\n",
@@ -136,75 +131,64 @@
     "\n",
     "    with mlflow.start_run(run_name=exp_name):\n",
     "\n",
-    "        # Train on RAW data - pipeline handles preprocessing\n",
+    "        # ⏱ TRAIN TIME\n",
+    "        train_start = time.time()\n",
     "        full_pipeline.fit(X_train, y_train)\n",
+    "        train_time_sec = round(time.time() - train_start, 4)\n",
     "\n",
-    "        # Predictions\n",
+    "        # Training accuracy\n",
+    "        train_pred = full_pipeline.predict(X_train)\n",
+    "        train_accuracy = accuracy_score(y_train, train_pred)\n",
+    "\n",
+    "        # 🔍 TEST predictions\n",
+    "        inf_start = time.time()\n",
     "        y_pred = full_pipeline.predict(X_test)\n",
+    "        inference_time_sec = round(time.time() - inf_start, 4)\n",
+    "\n",
     "        y_proba = full_pipeline.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "        # ----- Metrics -----\n",
     "        metrics = {\n",
     "            \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
-    "            \"test_precision\": precision_score(y_test, y_pred, zero_division=0),\n",
-    "            \"test_recall\": recall_score(y_test, y_pred, zero_division=0),\n",
-    "            \"test_f1\": f1_score(y_test, y_pred, zero_division=0),\n",
+    "            \"test_precision\": precision_score(y_test, y_pred),\n",
+    "            \"test_recall\": recall_score(y_test, y_pred),\n",
+    "            \"test_f1\": f1_score(y_test, y_pred),\n",
     "            \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
+    "\n",
+    "            # NEW metrics from config.yml\n",
+    "            \"train_accuracy\": train_accuracy,\n",
+    "            \"train_time\": train_time_sec,\n",
+    "            \"inference_time\": inference_time_sec\n",
     "        }\n",
     "\n",
-    "        # Log all metrics\n",
+    "        # Log metrics\n",
     "        for k, v in metrics.items():\n",
     "            mlflow.log_metric(k, v)\n",
     "\n",
-    "        # Log hyperparameters\n",
+    "        # Log model hyperparameters\n",
     "        mlflow.log_params(params)\n",
     "        mlflow.log_param(\"random_state\", config_random_state)\n",
     "\n",
-    "        # Create model signature with RAW data format\n",
+    "        # Log model with preprocessing\n",
     "        signature = infer_signature(X_train, full_pipeline.predict(X_train))\n",
     "\n",
-    "        # Log the FULL pipeline (preprocessing + model)\n",
     "        mlflow.sklearn.log_model(\n",
     "            sk_model=full_pipeline,\n",
     "            artifact_path=MODEL_ARTIFACT_PATH,\n",
     "            signature=signature,\n",
-    "            input_example=X_train.head(5)  # Log example raw data\n",
+    "            input_example=X_train.head(5)\n",
     "        )\n",
     "\n",
-    "        print(f\"   ✅ {exp_name} → F1: {metrics['test_f1']:.4f}, \"\n",
-    "              f\"Recall: {metrics['test_recall']:.4f}, \"\n",
-    "              f\"ROC-AUC: {metrics['test_roc_auc']:.4f}\")\n",
+    "        print(f\"   ✅ {exp_name} logged successfully with metrics: {metrics}\")\n",
     "\n",
     "        results.append((exp_name, metrics))\n",
     "\n",
     "# -----------------------------------------\n",
-    "# 6️⃣ Summary of All Experiments\n",
+    "# 7️⃣ Summary\n",
     "# -----------------------------------------\n",
     "print(\"\\n\" + \"=\" * 80)\n",
     "print(\"🎉 TRAINING COMPLETED SUCCESSFULLY!\")\n",
     "print(\"=\" * 80)\n",
-    "print(\"\\n📊 EXPERIMENT RESULTS SUMMARY:\\n\")\n",
-    "\n",
-    "results_df = pd.DataFrame([\n",
-    "    {\"Experiment\": name, **metrics} \n",
-    "    for name, metrics in results\n",
-    "])\n",
-    "\n",
-    "print(results_df.to_string(index=False))\n",
-    "\n",
-    "# Find best model by F1 score\n",
-    "best_idx = results_df[\"test_f1\"].idxmax()\n",
-    "best_model = results_df.iloc[best_idx]\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(f\"🏆 BEST MODEL: {best_model['Experiment']}\")\n",
-    "print(f\"   F1 Score: {best_model['test_f1']:.4f}\")\n",
-    "print(f\"   Recall: {best_model['test_recall']:.4f}\")\n",
-    "print(f\"   ROC-AUC: {best_model['test_roc_auc']:.4f}\")\n",
-    "print(\"=\" * 80)\n",
-    "\n",
-    "print(\"\\n✅ All models logged to MLflow and can accept RAW data!\")\n",
-    "print(\"✅ Models ready for serving endpoint deployment!\")"
+    "\n"
    ]
   }
  ],
