--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -90,6 +90,27 @@
     "    print(f\"❌ MLflow Init Failed: {e}\")\n",
     "    sys.exit(1)\n",
     "\n",
+    "\n",
+    "# -------------------------\n",
+    "# 🆕 AUTO TABLE CREATION LOGIC (UNCHANGED)\n",
+    "# -------------------------\n",
+    "\n",
+    "def ensure_table_exists(table_name: str, df_schema, spark):\n",
+    "    \"\"\"Create evaluation delta table automatically if not exists.\"\"\"\n",
+    "    try:\n",
+    "        spark.sql(f\"DESCRIBE TABLE {table_name}\")\n",
+    "        print(f\"📌 Table exists: {table_name}\")\n",
+    "    except Exception:\n",
+    "        print(f\"🆕 Creating new Delta table: {table_name}\")\n",
+    "        (\n",
+    "            spark.createDataFrame([], df_schema)\n",
+    "            .write.format(\"delta\")\n",
+    "            .option(\"overwriteSchema\", \"true\")\n",
+    "            .saveAsTable(table_name)\n",
+    "        )\n",
+    "        print(f\"✅ Table created: {table_name}\")\n",
+    "\n",
+    "\n",
     "# -------------------------\n",
     "# 3️⃣ Fetch Runs\n",
     "# -------------------------\n",
@@ -126,9 +147,12 @@
     "    print(f\"📌 {len(run_list)} runs fetched and ready for logging.\")\n",
     "    return run_list\n",
     "\n",
+    "\n",
     "# -------------------------\n",
-    "# 4️⃣ Log Evaluation Results\n",
+    "# 4️⃣ Log Evaluation Results (UPDATED WITH MERGE - NO DUPLICATES)\n",
     "# -------------------------\n",
+    "\n",
+    "from delta.tables import DeltaTable\n",
     "\n",
     "def log_results(run_list):\n",
     "    print(\"\\n📝 Logging evaluation results to Delta table...\")\n",
@@ -148,8 +172,27 @@
     "        })\n",
     "\n",
     "    df = pd.DataFrame(records)\n",
-    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
+    "    spark_df = spark.createDataFrame(df)\n",
+    "\n",
+    "    ensure_table_exists(config.EVALUATION_LOG_TABLE, spark_df.schema, spark)\n",
+    "\n",
+    "    # 🔁 MERGE LOGIC TO PREVENT DUPLICATE ROWS\n",
+    "    try:\n",
+    "        delta = DeltaTable.forName(spark, config.EVALUATION_LOG_TABLE)\n",
+    "\n",
+    "        delta.alias(\"t\").merge(\n",
+    "            spark_df.alias(\"s\"),\n",
+    "            \"t.run_id = s.run_id AND t.model_name = s.model_name\"\n",
+    "        ).whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
+    "\n",
+    "        print(\"🔁 MERGE successful — duplicate rows avoided.\")\n",
+    "\n",
+    "    except Exception:\n",
+    "        spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
+    "        print(\"ℹ️ Table not found earlier — appended first-time entries.\")\n",
+    "\n",
     "    print(\"✅ Evaluation logged successfully.\")\n",
+    "\n",
     "\n",
     "# -------------------------\n",
     "# 5️⃣ Display Summary\n",
@@ -159,6 +202,7 @@
     "    print(\"\\n📊 TOP MODEL RESULTS:\\n\")\n",
     "    for rank, run in enumerate(run_list[:10], 1):\n",
     "        print(f\"{rank}. {run['run_name']} → {config.PRIMARY_METRIC}: {run['primary_metric']:.4f}\")\n",
+    "\n",
     "\n",
     "# -------------------------\n",
     "# 🚀 MAIN EXECUTION\n",
@@ -173,7 +217,7 @@
     "    log_results(run_list)\n",
     "    show_summary(run_list)\n",
     "\n",
-    "    print(\"\\n🎉 Evaluation Completed — No Models Registered (As Expected)\")\n",
+    "    print(\"\\n🎉 Evaluation Completed \")\n",
     "    print(\"=\" * 80)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
