--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -109,6 +109,24 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
+    "# ---------------------- AUTO TABLE CREATOR (NEW) ----------------------\n",
+    "\n",
+    "def ensure_table_exists(table_name: str, df_schema, spark):\n",
+    "    \"\"\"Create delta table automatically if not exists.\"\"\"\n",
+    "    try:\n",
+    "        spark.sql(f\"DESCRIBE TABLE {table_name}\")\n",
+    "        print(f\"📌 Table exists: {table_name}\")\n",
+    "    except Exception:\n",
+    "        print(f\"🆕 Creating new Delta table: {table_name}\")\n",
+    "        (\n",
+    "            spark.createDataFrame([], df_schema)\n",
+    "            .write.format(\"delta\")\n",
+    "            .option(\"overwriteSchema\", \"true\")\n",
+    "            .saveAsTable(table_name)\n",
+    "        )\n",
+    "        print(f\"✅ Table created: {table_name}\")\n",
+    "\n",
+    "\n",
     "# ---------------------- FETCH ALL RUNS ----------------------\n",
     "\n",
     "def get_all_runs() -> List[Dict]:\n",
@@ -123,10 +141,7 @@
     "    processed_runs = []\n",
     "\n",
     "    for run in runs:\n",
-    "        # Get all metrics dynamically\n",
     "        all_metrics = {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE if m in run.data.metrics}\n",
-    "        \n",
-    "        # Build model URI properly\n",
     "        model_uri = f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\"\n",
     "\n",
     "        processed_runs.append({\n",
@@ -153,14 +168,12 @@
     "    try:\n",
     "        versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
     "    except:\n",
-    "        # Model doesn't exist yet, not a duplicate\n",
     "        return False\n",
     "\n",
     "    for version in versions:\n",
     "        try:\n",
     "            run = client.get_run(version.run_id)\n",
     "\n",
-    "            # Compare metrics within tolerance\n",
     "            metric_match = True\n",
     "            for m in config.METRICS_TO_COMPARE:\n",
     "                old_val = run.data.metrics.get(m)\n",
@@ -171,7 +184,6 @@
     "                        metric_match = False\n",
     "                        break\n",
     "\n",
-    "            # Compare params\n",
     "            params_match = (new_model[\"params\"] == run.data.params)\n",
     "\n",
     "            if metric_match and params_match:\n",
@@ -194,7 +206,6 @@
     "        slack.send(f\"⚠ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
     "        return None\n",
     "\n",
-    "    # Register the model\n",
     "    print(f\"   🔄 Registering model...\")\n",
     "    new_version = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
     "    version = new_version.version\n",
@@ -202,7 +213,6 @@
     "    print(f\"   ✅ Registered as version: {version}\")\n",
     "    slack.send(f\"✅ Registered: {config.MODEL_NAME} v{version}\", \"success\")\n",
     "\n",
-    "    # Add comprehensive tags\n",
     "    try:\n",
     "        tags = {\n",
     "            \"run_name\": model[\"run_name\"],\n",
@@ -216,11 +226,9 @@
     "            \"metrics\": json.dumps({k: round(v, 4) for k, v in model[\"metrics\"].items() if v is not None})\n",
     "        }\n",
     "\n",
-    "        # Set all tags\n",
     "        for key, value in tags.items():\n",
     "            client.set_model_version_tag(config.MODEL_NAME, version, key, value)\n",
     "\n",
-    "        # Update description\n",
     "        client.update_model_version(\n",
     "            name=config.MODEL_NAME,\n",
     "            version=version,\n",
@@ -243,11 +251,13 @@
     "    return version\n",
     "\n",
     "\n",
-    "# ---------------------- LOG DECISION TO TABLE ----------------------\n",
+    "# ---------------------- LOG DECISION TO TABLE (UPDATED - NO DUPLICATES) ----------------------\n",
+    "\n",
+    "from delta.tables import DeltaTable\n",
     "\n",
     "def log_decision(model, registered, version, reason):\n",
-    "    \"\"\"Log registration decision to Delta table\"\"\"\n",
-    "    \n",
+    "    \"\"\"Log registration decision to Delta table with MERGE to avoid duplicates\"\"\"\n",
+    "\n",
     "    try:\n",
     "        df = pd.DataFrame([{\n",
     "            \"timestamp\": datetime.now(),\n",
@@ -263,9 +273,32 @@
     "            \"reason\": reason\n",
     "        }])\n",
     "\n",
-    "        spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "        spark_df = spark.createDataFrame(df)\n",
+    "\n",
+    "        ensure_table_exists(config.REGISTRATION_LOG_TABLE, spark_df.schema, spark)\n",
+    "\n",
+    "        try:\n",
+    "            delta_table = DeltaTable.forName(spark, config.REGISTRATION_LOG_TABLE)\n",
+    "\n",
+    "            delta_table.alias(\"t\").merge(\n",
+    "                spark_df.alias(\"s\"),\n",
+    "                \"\"\"\n",
+    "                t.run_id = s.run_id\n",
+    "                AND t.model_name = s.model_name\n",
+    "                AND t.registered_version = s.registered_version\n",
+    "                \"\"\"\n",
+    "            ) \\\n",
+    "            .whenMatchedUpdateAll() \\\n",
+    "            .whenNotMatchedInsertAll() \\\n",
+    "            .execute()\n",
+    "\n",
+    "            print(f\"🔁 MERGE successful → No duplicate row added.\")\n",
+    "\n",
+    "        except Exception:\n",
+    "            spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "\n",
     "        print(f\"   📄 Logged to: {config.REGISTRATION_LOG_TABLE}\")\n",
-    "    \n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f\"   ⚠ Failed to log decision: {e}\")\n",
     "\n",
@@ -299,7 +332,6 @@
     "            log_decision(model, False, None, \"⚠ Duplicate - Skipped\")\n",
     "            skipped_count += 1\n",
     "\n",
-    "    # Final summary\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"🎉 REGISTRATION PIPELINE COMPLETED\")\n",
     "    print(\"=\"*80)\n",
@@ -313,7 +345,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n"
    ]
   }
  ],
