--- a/uat_env/uat_inference.ipynb
+++ b/uat_env/uat_inference.ipynb
@@ -19,7 +19,7 @@
     }
    ],
    "source": [
-    "# 🧪 UAT MODEL INFERENCE - NEW WORKFLOW (CONFIG-DRIVEN)\n",
+    "# 🧪 UAT MODEL INFERENCE - FIXED FOR RAW DATA\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -45,7 +45,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🧪 UAT MODEL INFERENCE (NEW WORKFLOW)\")\n",
+    "print(\"🧪 UAT MODEL INFERENCE (FIXED FOR RAW DATA)\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "\n",
@@ -94,8 +94,10 @@
     "        self.STAGING_ALIAS = pipeline_cfg[\"aliases\"][\"staging\"]\n",
     "        self.PRODUCTION_ALIAS = pipeline_cfg[\"aliases\"][\"production\"]\n",
     "        \n",
-    "        self.UAT_INPUT_TABLE = pipeline_cfg[\"data\"][\"preprocessed_table\"]\n",
-    "        self.LABEL_COL = \"label\"\n",
+    "        # 🔥 FIX: Use RAW input table instead of preprocessed\n",
+    "        self.UAT_INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
+    "        self.FEATURES = pipeline_cfg[\"data\"][\"features\"]\n",
+    "        self.LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
     "        \n",
     "        self.PRIMARY_METRIC = pipeline_cfg[\"metrics\"][\"classification\"][\"primary_metric\"]\n",
     "        self.DIRECTION = pipeline_cfg[\"metrics\"][\"classification\"][\"direction\"]\n",
@@ -110,7 +112,8 @@
     "        print(f\"\\n📊 Configuration Summary:\")\n",
     "        print(f\"   Model: {self.MODEL_NAME}\")\n",
     "        print(f\"   Alias: @{self.STAGING_ALIAS}\")\n",
-    "        print(f\"   UAT Input: {self.UAT_INPUT_TABLE}\")\n",
+    "        print(f\"   UAT Input: {self.UAT_INPUT_TABLE} (RAW DATA)\")\n",
+    "        print(f\"   Features: {len(self.FEATURES)} columns\")\n",
     "        print(f\"   Primary Metric: {self.PRIMARY_METRIC}\")\n",
     "\n",
     "config = Config()\n",
@@ -170,16 +173,6 @@
     "    sys.exit(1)\n",
     "\n",
     "\n",
-    "\n",
-    "# -----------------------------------------------------------------------------------\n",
-    "# HELPERS\n",
-    "# -----------------------------------------------------------------------------------\n",
-    "\n",
-    "def vector_to_array(v):\n",
-    "    return v.toArray() if hasattr(v, 'toArray') else np.array(v)\n",
-    "\n",
-    "\n",
-    "\n",
     "# -----------------------------------------------------------------------------------\n",
     "# STEP 1: LOAD MODEL\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -198,22 +191,30 @@
     "    return model, int(model_version.version), model_version.run_id\n",
     "\n",
     "\n",
-    "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# STEP 2: LOAD UAT DATA\n",
+    "# STEP 2: LOAD UAT DATA (FIXED - RAW DATA)\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def load_uat_data():\n",
-    "    print(\"\\n📍 Loading UAT Dataset...\")\n",
+    "    print(\"\\n📍 Loading UAT Dataset (RAW DATA)...\")\n",
     "\n",
+    "    # 🔥 FIX: Load RAW table instead of preprocessed\n",
     "    df_spark = spark.read.format(\"delta\").table(config.UAT_INPUT_TABLE)\n",
     "    df = df_spark.toPandas()\n",
     "\n",
-    "    X = np.array([vector_to_array(r) for r in df[\"features\"]])\n",
+    "    # 🔥 FIX: Extract features and label from RAW data\n",
+    "    X = df[config.FEATURES]\n",
     "    y_true = df[config.LABEL_COL].values\n",
     "    \n",
+    "    # 🔥 FIX: Convert label if it's text\n",
+    "    if y_true.dtype == 'object':\n",
+    "        y_true = pd.Series(y_true).map({\"yes\": 1, \"no\": 0}).values\n",
+    "    \n",
+    "    print(f\"✅ Loaded {len(X)} samples with {len(config.FEATURES)} features\")\n",
+    "    print(f\"   Sample data shape: {X.shape}\")\n",
+    "    print(f\"   Label distribution: {np.bincount(y_true)}\")\n",
+    "    \n",
     "    return df, X, y_true\n",
-    "\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -221,6 +222,9 @@
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def run_inference(model, X):\n",
+    "    print(\"\\n📍 Running inference on raw data...\")\n",
+    "    \n",
+    "    # Model will automatically preprocess the data (OneHotEncoder + StandardScaler)\n",
     "    y_pred = model.predict(X)\n",
     "\n",
     "    try:\n",
@@ -228,8 +232,10 @@
     "    except:\n",
     "        y_pred_proba = y_pred.astype(float)\n",
     "\n",
+    "    print(f\"✅ Inference completed\")\n",
+    "    print(f\"   Predictions shape: {y_pred.shape}\")\n",
+    "    \n",
     "    return y_pred, y_pred_proba\n",
-    "\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -237,6 +243,8 @@
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def calculate_metrics(y_true, y_pred, y_pred_proba):\n",
+    "    print(\"\\n📍 Calculating metrics...\")\n",
+    "    \n",
     "    metrics = {\n",
     "        \"accuracy\": accuracy_score(y_true, y_pred),\n",
     "        \"precision\": precision_score(y_true, y_pred, zero_division=0),\n",
@@ -251,8 +259,12 @@
     "\n",
     "    metrics[\"confusion_matrix\"] = confusion_matrix(y_true, y_pred).tolist()\n",
     "\n",
-    "    return metrics\n",
+    "    print(f\"✅ Metrics calculated:\")\n",
+    "    for key, val in metrics.items():\n",
+    "        if key != \"confusion_matrix\":\n",
+    "            print(f\"   {key}: {val:.4f}\")\n",
     "\n",
+    "    return metrics\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -260,27 +272,36 @@
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def validate_uat(metrics, version):\n",
+    "    print(\"\\n📍 Validating UAT thresholds...\")\n",
+    "    \n",
     "    failed = []\n",
     "\n",
     "    for key, min_val in config.UAT_THRESHOLDS.items():\n",
     "        if key.startswith(\"min_\"):\n",
     "            metric_name = key.replace(\"min_\", \"\")\n",
-    "            if metrics.get(metric_name, 0) < min_val:\n",
-    "                failed.append(key)\n",
+    "            actual_val = metrics.get(metric_name, 0)\n",
+    "            \n",
+    "            if actual_val < min_val:\n",
+    "                failed.append(f\"{metric_name}: {actual_val:.4f} < {min_val}\")\n",
+    "                print(f\"   ❌ FAILED: {metric_name} = {actual_val:.4f} < threshold {min_val}\")\n",
+    "            else:\n",
+    "                print(f\"   ✅ PASSED: {metric_name} = {actual_val:.4f} >= threshold {min_val}\")\n",
     "\n",
     "    status = \"PASSED\" if len(failed) == 0 else \"FAILED\"\n",
     "\n",
     "    if status == \"PASSED\":\n",
+    "        print(f\"\\n🎉 UAT Status: {status}\")\n",
     "        send_slack_notification(f\"🎉 Model PASSED UAT — v{version}\", \"success\")\n",
     "    else:\n",
+    "        print(f\"\\n❌ UAT Status: {status}\")\n",
+    "        print(f\"   Failed checks: {failed}\")\n",
     "        send_slack_notification(f\"❌ Model FAILED UAT — v{version}\", \"error\")\n",
     "\n",
     "    return status, failed\n",
     "\n",
     "\n",
-    "\n",
     "# -----------------------------------------------------------------------------------\n",
-    "# STEP 6: STORE RESULTS (UPDATED WITH DELETE CLEANUP)\n",
+    "# STEP 6: STORE RESULTS\n",
     "# -----------------------------------------------------------------------------------\n",
     "\n",
     "def log_results(version, run_id, metrics, status, failed_checks):\n",
@@ -289,7 +310,7 @@
     "\n",
     "    from delta.tables import DeltaTable\n",
     "\n",
-    "    # 🔥 Added cleanup step (remove older duplicate records)\n",
+    "    # Cleanup duplicate entries\n",
     "    try:\n",
     "        spark.sql(f\"\"\"\n",
     "        DELETE FROM {config.UAT_RESULTS_TABLE}\n",
@@ -323,8 +344,7 @@
     "    except:\n",
     "        df.write.mode(\"overwrite\").option(\"overwriteSchema\", \"true\").saveAsTable(config.UAT_RESULTS_TABLE)\n",
     "\n",
-    "    print(\"📌 Results logged.\")\n",
-    "\n",
+    "    print(\"📌 Results logged successfully.\")\n",
     "\n",
     "\n",
     "# -----------------------------------------------------------------------------------\n",
@@ -333,6 +353,10 @@
     "\n",
     "def main():\n",
     "    try:\n",
+    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(\"🎯 STARTING UAT INFERENCE PIPELINE\")\n",
+    "        print(\"=\"*80)\n",
+    "        \n",
     "        model, version, run_id = load_staging_model()\n",
     "        df, X, y_true = load_uat_data()\n",
     "        y_pred, y_pred_proba = run_inference(model, X)\n",
@@ -340,16 +364,24 @@
     "        status, failed_checks = validate_uat(metrics, version)\n",
     "        log_results(version, run_id, metrics, status, failed_checks)\n",
     "\n",
-    "        print(\"\\n🎯 Final UAT Status:\", status)\n",
+    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(f\"🎯 UAT FINAL STATUS: {status}\")\n",
+    "        print(\"=\"*80)\n",
+    "        \n",
+    "        if status == \"PASSED\":\n",
+    "            print(\"✅ Model is ready for production deployment!\")\n",
+    "        else:\n",
+    "            print(\"❌ Model needs improvement before production\")\n",
     "\n",
     "    except Exception as e:\n",
+    "        print(f\"\\n❌ UAT Pipeline Failed: {e}\")\n",
     "        send_slack_notification(f\"🔥 UAT Pipeline Failed — {e}\", \"error\")\n",
     "        traceback.print_exc()\n",
     "        sys.exit(1)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
