fix the code issue

--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -65,7 +65,7 @@
     "            self.SLACK_WEBHOOK = dbutils.secrets.get(\"shared-scope\", \"SLACK_WEBHOOK_URL\")\n",
     "            print(\"🔐 Slack webhook loaded\")\n",
     "        except:\n",
-    "            print(\"⚠ Slack webhook NOT configured (Optional)\")\n",
+    "        print(\"⚠ Slack webhook NOT configured (Optional)\")\n",
     "\n",
     "\n",
     "config = Config()\n",
@@ -109,22 +109,42 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
-    "# ---------------------- AUTO TABLE CREATOR (NEW) ----------------------\n",
+    "# ---------------------- AUTO TABLE CREATOR (NEW - FIXED SCHEMA) ----------------------\n",
     "\n",
     "def ensure_table_exists(table_name: str, df_schema, spark):\n",
-    "    \"\"\"Create delta table automatically if not exists.\"\"\"\n",
+    "    \"\"\"Create delta table automatically if not exists (fixed full schema).\"\"\"\n",
     "    try:\n",
     "        spark.sql(f\"DESCRIBE TABLE {table_name}\")\n",
     "        print(f\"📌 Table exists: {table_name}\")\n",
     "    except Exception:\n",
     "        print(f\"🆕 Creating new Delta table: {table_name}\")\n",
+    "\n",
+    "        # 👇 FIXED: explicit schema including registered_version column\n",
+    "        empty_df = spark.createDataFrame(\n",
+    "            [],\n",
+    "            \"\"\"\n",
+    "                timestamp TIMESTAMP,\n",
+    "                run_id STRING,\n",
+    "                run_name STRING,\n",
+    "                model_name STRING,\n",
+    "                primary_metric STRING,\n",
+    "                primary_metric_value DOUBLE,\n",
+    "                metrics_json STRING,\n",
+    "                params_json STRING,\n",
+    "                registered BOOLEAN,\n",
+    "                registered_version STRING,\n",
+    "                reason STRING\n",
+    "            \"\"\"\n",
+    "        )\n",
+    "\n",
     "        (\n",
-    "            spark.createDataFrame([], df_schema)\n",
-    "            .write.format(\"delta\")\n",
+    "            empty_df.write\n",
+    "            .format(\"delta\")\n",
     "            .option(\"overwriteSchema\", \"true\")\n",
     "            .saveAsTable(table_name)\n",
     "        )\n",
-    "        print(f\"✅ Table created: {table_name}\")\n",
+    "\n",
+    "        print(f\"✅ Table created with correct schema: {table_name}\")\n",
     "\n",
     "\n",
     "# ---------------------- FETCH ALL RUNS ----------------------\n",
